force-app/main/default/objects/AAO_Source__c/AAO_Source__c.object-meta.xml
<CustomObject>
    <description>Evidence normalised to one shape, versioned, immutable, resident on core regardless of which plane it arrived on. What every span is byte-verified against.</description>
    <label>AAO Source</label>
    <nameField>
        <displayFormat>SRC-{00000000}</displayFormat>
        <label>AAO Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>