force-app/main/default/objects/AAO_Source__c/fields/AAO_Account__c.field-meta.xml
<CustomField>
    <fullName>AAO_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Locate, from the opportunity. Read by: Account-grain retrieval and later account orchestration.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AAO Sources</relationshipLabel>
    <relationshipName>AAO_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>