force-app/main/default/objects/AAO_Source__c/fields/AAO_Artifact_SHA256__c.field-meta.xml
<CustomField>
    <fullName>AAO_Artifact_SHA256__c</fullName>
    <description>Fingerprint of the delivered artifact. Written by: Normalisation. Read by: Integrity; idempotent re-delivery; the scope-key composer. The platform refuses caseSensitive on a non-unique text field, so case sensitivity here is enforced in Apex, not by the field.</description>
    <label>Artifact SHA256</label>
    <length>64</length>
    <type>Text</type>
</CustomField>