force-app/main/default/objects/AAO_Source__c/fields/AAO_Boundary_Basis__c.field-meta.xml
<CustomField>
    <fullName>AAO_Boundary_Basis__c</fullName>
    <description>Written by: Boundary detector. Read by: The labelling exercise; audit.</description>
    <label>Boundary Basis</label>
    <length>40</length>
    <type>Text</type>
</CustomField>