force-app/main/default/objects/AAO_Source__c/fields/AAO_Diarization__c.field-meta.xml
<CustomField>
    <fullName>AAO_Diarization__c</fullName>
    <description>Written by: Normalisation. Read by: Which contiguity rule binds; speaker-requirement reach; admission gate.</description>
    <label>Diarization</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attributed</fullName>
            </value>
            <value>
                <fullName>Segmented</fullName>
            </value>
            <value>
                <fullName>Unsegmented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>