force-app/main/default/objects/AAO_Source__c/fields/AAO_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>AAO_Duration_Seconds__c</fullName>
    <description>Written by: Collector. Read by: The ninety-minute ceiling.</description>
    <label>Duration Seconds</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>