force-app/main/default/objects/AAO_Source__c/fields/AAO_Evidence_Occurred__c.field-meta.xml
<CustomField>
    <fullName>AAO_Evidence_Occurred__c</fullName>
    <description>Immutable. Written by: Normalisation. Read by: The occurred clock. The accumulation test asserts on it.</description>
    <label>Evidence Occurred</label>
    <type>DateTime</type>
</CustomField>