force-app/main/default/objects/AAO_Source__c/fields/AAO_Meeting_Title__c.field-meta.xml
<CustomField>
    <fullName>AAO_Meeting_Title__c</fullName>
    <description>THE MEETING TITLE AS THE SOURCE SYSTEM RECORDED IT, carried verbatim and never inferred. Written by: intake, where the source system supplies one (Teams and Gong both do). Read by: AAO_Cards.sectionTitle, which titles a call's board section "Date: Meeting Title". Matthew's ruling, fifty-seventh stamp: the call type comes from the meeting title rather than from a model reading the transcript, because the source system already knows it and inferring a call type would be a judgment nobody asked for on a customer-visible column heading. BLANK IS HONEST AND EXPECTED: a hand-carried paste carries no metadata, and the section then titles by date alone, which is the ruled fallback. Nothing derives this field from the transcript, ever.</description>
    <inlineHelpText>The meeting title from the source system (Teams, Gong), carried verbatim. Blank where the source carried none; the board section then titles by date alone.</inlineHelpText>
    <label>Meeting Title</label>
    <type>Text</type>
    <length>255</length>
</CustomField>