force-app/main/default/objects/AAO_Source__c/fields/AAO_Normalized_Text__c.field-meta.xml
<CustomField>
    <fullName>AAO_Normalized_Text__c</fullName>
    <description>Immutable. Written by: Normalisation, once, frozen normal form. Read by: Span verification; extraction; library copy.</description>
    <label>Normalized Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>