force-app/main/default/objects/AAO_Source__c/fields/AAO_Normalizer_Version__c.field-meta.xml
<CustomField>
    <fullName>AAO_Normalizer_Version__c</fullName>
    <description>Written by: Normalisation. Read by: Determinism audit.</description>
    <label>Normalizer Version</label>
    <type>Text</type>
    <length>20</length>
</CustomField>