force-app/main/default/objects/AAO_Source__c/fields/AAO_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AAO_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Written by: Locate; ambiguity = skip and dead-letter. Read by: Deal scoping; the scope-key composer.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AAO Sources</relationshipLabel>
    <relationshipName>AAO_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>