force-app/main/default/objects/AAO_Source__c/fields/AAO_Origin__c.field-meta.xml
<CustomField>
    <fullName>AAO_Origin__c</fullName>
    <description>Written by: Collector. Read by: Channel routing; gate variant.</description>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECI</fullName>
            </value>
            <value>
                <fullName>ingest</fullName>
            </value>
            <value>
                <fullName>note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>