force-app/main/default/objects/AAO_Source__c/fields/AAO_Part_Count__c.field-meta.xml
<CustomField>
    <fullName>AAO_Part_Count__c</fullName>
    <description>Written by: Normalisation. Read by: Locator resolution; input order; completeness.</description>
    <label>Part Count</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <required>true</required>
</CustomField>