force-app/main/default/objects/AAO_Source__c/fields/AAO_Raw_SHA256__c.field-meta.xml
<CustomField>
    <fullName>AAO_Raw_SHA256__c</fullName>
    <description>The hash of the RAW INPUT this row was normalized FROM, written by whatever performed the normalization. Ruled 7 August: the normalizer stamp composes, normalizer version plus raw input hash, so two different byte outputs can never carry identical stamps. Null on rows normalized before this field existed, where the stamp falls back to the output hash and says so in its own prefix.</description>
    <label>Raw SHA256</label>
    <type>Text</type>
    <length>64</length>
</CustomField>