force-app/main/default/objects/AAO_Source__c/fields/AAO_Scope_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Scope_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Written by: AAO_SourceTrigger via AAO_ScopeKey, frozen composer, ScopeId + ArtifactSHA + PartIndex. Read by: Dedup target. DUPLICATE_VALUE is a merge path.</description>
    <externalId>true</externalId>
    <label>Scope Key</label>
    <length>101</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>