force-app/main/default/objects/AAO_Source__c/fields/AAO_SHA256__c.field-meta.xml
<CustomField>
    <fullName>AAO_SHA256__c</fullName>
    <description>Fingerprint of the normalized text. Written by: Normalisation. Read by: Integrity; idempotent re-delivery. The platform refuses caseSensitive on a non-unique text field, so case sensitivity here is enforced in Apex, not by the field.</description>
    <label>SHA256</label>
    <type>Text</type>
    <length>64</length>
</CustomField>