force-app/main/default/objects/AAO_Source__c/fields/AAO_Source_Ref__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source_Ref__c</fullName>
    <description>Written by: Collector. Read by: Provenance; re-normalisation lineage.</description>
    <label>Source Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>