force-app/main/default/objects/AAO_Source__c/fields/AAO_Speaker_Roster__c.field-meta.xml
<CustomField>
    <fullName>AAO_Speaker_Roster__c</fullName>
    <description>JSON. Written by: Normalisation. Read by: Admission gate; who-said-it; rank check; shadow-person detection.</description>
    <label>Speaker Roster</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>