force-app/main/default/objects/AAO_Source__c/fields/AAO_Substantive_Offset__c.field-meta.xml
<CustomField>
    <fullName>AAO_Substantive_Offset__c</fullName>
    <description>Mutable. Written by: Small-talk boundary detector. Read by: Charter input assembly. Never read by span verification.</description>
    <label>Substantive Offset</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>