force-app/main/default/objects/AAO_Source__c/fields/AAO_System_Ref__c.field-meta.xml
<CustomField>
    <fullName>AAO_System_Ref__c</fullName>
    <description>THE CONVERSATION&apos;S IDENTITY IN THE SYSTEM IT CAME FROM: the ECI VideoCall id, the Gong call id, whatever the origin system calls this one conversation. Written at ingest, never derived from our own bytes. Ruled 7 August: OCCASION IDENTITY IS THE CONVERSATION, source-system reference plus occurred time, because the artifact hash is a byte-provenance key and two normalizations of one call carry two hashes. Coverage counts conversations and spans are checked against the hash; two keys for two jobs. Null on rows ingested before this field existed, where the occasion key falls back to account plus occurred time and says so.</description>
    <label>System Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>