force-app/main/default/objects/AAO_Source__c/fields/AAO_Trim_Manifest__c.field-meta.xml
<CustomField>
    <fullName>AAO_Trim_Manifest__c</fullName>
    <description>JSON. Written by: Normalisation. Read by: Audit. A removal that cannot name its rule is a defect.</description>
    <label>Trim Manifest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>